# serializer version: 1
# name: test_all_entities[sensor.dryer_end_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.dryer_end_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'End time',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': 'mdi:progress-clock',
    'original_name': 'End time',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'end_time',
    'unique_id': 'said_dryer-timeremaining',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.dryer_end_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer End time',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:progress-clock',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dryer_end_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2025-05-04T12:59:00+00:00',
  })
# ---
# name: test_all_entities[sensor.dryer_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'setting',
        'delay_countdown',
        'delay_paused',
        'smart_delay',
        'smart_grid_pause',
        'pause',
        'running_maincycle',
        'running_postcycle',
        'exception',
        'complete',
        'power_failure',
        'service_diagnostic_mode',
        'factory_diagnostic_mode',
        'life_test',
        'customer_focus_mode',
        'demo_mode',
        'hard_stop_or_error',
        'system_initialize',
        'cancelled',
        'cycle_sensing',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.dryer_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'State',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'State',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dryer_state',
    'unique_id': 'said_dryer-state',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.dryer_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dryer State',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'setting',
        'delay_countdown',
        'delay_paused',
        'smart_delay',
        'smart_grid_pause',
        'pause',
        'running_maincycle',
        'running_postcycle',
        'exception',
        'complete',
        'power_failure',
        'service_diagnostic_mode',
        'factory_diagnostic_mode',
        'life_test',
        'customer_focus_mode',
        'demo_mode',
        'hard_stop_or_error',
        'system_initialize',
        'cancelled',
        'cycle_sensing',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dryer_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'running_maincycle',
  })
# ---
# name: test_all_entities[sensor.dual_cavity_oven_lower_oven_current_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.dual_cavity_oven_lower_oven_current_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lower oven current temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Lower oven current temperature',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oven_current_temperature_lower',
    'unique_id': 'said_oven_dual-oven_current_temperature_lower',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[sensor.dual_cavity_oven_lower_oven_current_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dual cavity oven Lower oven current temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dual_cavity_oven_lower_oven_current_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '180',
  })
# ---
# name: test_all_entities[sensor.dual_cavity_oven_lower_oven_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'preheating',
        'cooking',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.dual_cavity_oven_lower_oven_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Lower oven state',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Lower oven state',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oven_state_lower',
    'unique_id': 'said_oven_dual-oven_state_lower',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.dual_cavity_oven_lower_oven_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dual cavity oven Lower oven state',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'preheating',
        'cooking',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dual_cavity_oven_lower_oven_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'standby',
  })
# ---
# name: test_all_entities[sensor.dual_cavity_oven_upper_oven_current_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.dual_cavity_oven_upper_oven_current_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Upper oven current temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Upper oven current temperature',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oven_current_temperature_upper',
    'unique_id': 'said_oven_dual-oven_current_temperature_upper',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[sensor.dual_cavity_oven_upper_oven_current_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dual cavity oven Upper oven current temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dual_cavity_oven_upper_oven_current_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '180',
  })
# ---
# name: test_all_entities[sensor.dual_cavity_oven_upper_oven_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'preheating',
        'cooking',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.dual_cavity_oven_upper_oven_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Upper oven state',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Upper oven state',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oven_state_upper',
    'unique_id': 'said_oven_dual-oven_state_upper',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.dual_cavity_oven_upper_oven_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Dual cavity oven Upper oven state',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'preheating',
        'cooking',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dual_cavity_oven_upper_oven_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'standby',
  })
# ---
# name: test_all_entities[sensor.single_cavity_oven_current_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.single_cavity_oven_current_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Current temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Current temperature',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oven_current_temperature',
    'unique_id': 'said_oven_single-oven_current_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[sensor.single_cavity_oven_current_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Single cavity oven Current temperature',
      <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.single_cavity_oven_current_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '180',
  })
# ---
# name: test_all_entities[sensor.single_cavity_oven_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'preheating',
        'cooking',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.single_cavity_oven_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'State',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'State',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'oven_state',
    'unique_id': 'said_oven_single-oven_state',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.single_cavity_oven_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Single cavity oven State',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'preheating',
        'cooking',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.single_cavity_oven_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'standby',
  })
# ---
# name: test_all_entities[sensor.washer_detergent_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'empty',
        '25',
        '50',
        '100',
        'active',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.washer_detergent_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Detergent level',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Detergent level',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'whirlpool_tank',
    'unique_id': 'said_washer-DispenseLevel',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.washer_detergent_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer Detergent level',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'empty',
        '25',
        '50',
        '100',
        'active',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washer_detergent_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_all_entities[sensor.washer_end_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.washer_end_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'End time',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': 'mdi:progress-clock',
    'original_name': 'End time',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'end_time',
    'unique_id': 'said_washer-timeremaining',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.washer_end_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'timestamp',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer End time',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:progress-clock',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washer_end_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2025-05-04T12:59:00+00:00',
  })
# ---
# name: test_all_entities[sensor.washer_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'setting',
        'delay_countdown',
        'delay_paused',
        'smart_delay',
        'smart_grid_pause',
        'pause',
        'running_maincycle',
        'running_postcycle',
        'exception',
        'complete',
        'power_failure',
        'service_diagnostic_mode',
        'factory_diagnostic_mode',
        'life_test',
        'customer_focus_mode',
        'demo_mode',
        'hard_stop_or_error',
        'system_initialize',
        'cycle_filling',
        'cycle_rinsing',
        'cycle_sensing',
        'cycle_soaking',
        'cycle_spinning',
        'cycle_washing',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.washer_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'State',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'State',
    'platform': 'whirlpool',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'washer_state',
    'unique_id': 'said_washer-state',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.washer_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Washer State',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'setting',
        'delay_countdown',
        'delay_paused',
        'smart_delay',
        'smart_grid_pause',
        'pause',
        'running_maincycle',
        'running_postcycle',
        'exception',
        'complete',
        'power_failure',
        'service_diagnostic_mode',
        'factory_diagnostic_mode',
        'life_test',
        'customer_focus_mode',
        'demo_mode',
        'hard_stop_or_error',
        'system_initialize',
        'cycle_filling',
        'cycle_rinsing',
        'cycle_sensing',
        'cycle_soaking',
        'cycle_spinning',
        'cycle_washing',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.washer_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'running_maincycle',
  })
# ---
